<resources>
    <string name="app_name">Meet&amp;Travel</string>
    <string name="entry_text">una app de</string>
    <string name="company_logo_text">Company Logo</string>
    <string name="password_text">Contraseña</string>
    <string name="forgot_text"><u>¿Ovidaste tu contraseña?</u></string>
    <string name="skip_text">Saltar</string>
    <string name="login_text">INICIAR SESIÓN</string>
    <string name="register_text">REGISTRAR</string>
    <string name="register_event">REGISTRAR EVENTO</string>
    <string name="name_text">Nombre completo</string>
    <string name="lastname_text">Apellido completo</string>
    <string name="phone_text">Teléfono</string>
    <string name="dni_text">DNI</string>
    <string name="birthdate_text">Fecha de nacimiento</string>
    <string name="email_text">Correo</string>

    <string name="event_title">Eventos</string>
    <string name="mock_text">Mock Text</string>
    <string name="detail_event_title_text">Detalle de Evento</string>
    <string name="providers_event_title">Proveedores de Estadías</string>
    <string name="company_title_text">Organizadora: </string>
    <string name="start_date_title">Inicio</string>
    <string name="end_date_title">Fin</string>
    <string name="address_title_text">Dirección</string>
    <string name="providers_button_text">VER ESTADÍAS</string>
    <string name="buy_button_text">COMPRAR</string>
    <string name="provider_contact_title">Contacto:</string>
    <string name="see_spaces_button_text">VER ESPACIOS</string>
    <string name="ruc_title_text">RUC:</string>
    <string name="ruc_text">RUC</string>
    <string name="telephone_text">Telephone</string>
    <string name="web_address_text">Web Address</string>
    <string name="web_title_text">Web:</string>
    <string name="spaces_event_title">Espacios</string>
    <string name="provider_event_title">Proveedor</string>
    <string name="start_date_space_text">Desde:</string>
    <string name="end_date_space_text">Hasta:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_purchases">Compras</string>
    <string name="reservations_title">Reservas</string>
    <string name="profile_title">Perfil</string>
    <string name="confirm_password_text">Confirmar contraseña</string>
    <string name="logistic_title">Logística</string>
    <string name="search_title">Search</string>
    <string name="name_event_text">Nombre</string>
    <string name="company_text">Organizadora</string>
    <string name="description_text">Descripción</string>
    <string name="start_date_text">Fecha Inicio</string>
    <string name="end_date_text">Fecha Fin</string>
    <string name="end_hour_text">Hora Fin</string>
    <string name="start_hour_text">Hora inicio</string>
    <string name="location_text">Dirección</string>
    <string name="image_button_text">Imagen</string>
    <string name="image_text">Imagen</string>
    <string name="create_text">Crear</string>
    <string name="new_event_title_text">Crea un nuevo evento</string>
    <string name="new_event_description_text">¡Y atrae a nuevos interesados de distintos lugares!</string>
    <string name="new_provider_title_text">Crea un nuevo proveedor</string>
    <string name="new_provider_description_text">¡Y atrae a nuevos interesados de distintos lugares!</string>
    <string name="ticket_name">Ticket</string>
    <string name="ticket_price">Precio</string>
    <string name="quantity_text">Cantidad</string>
    <string name="new_tickets_title_text">Crea los tickets de tu evento</string>
    <string name="new_tickets_description_text">¡Y que la gente comience a adquirirlos!</string>
    <string name="create_tickets_text">Crear tickets</string>
    <string name="number_of_tickets" formatted="false">%1$d tickets</string>
    <string name="success_text">¡Genial!</string>
    <string name="whats_next_text">Organizaste de manera exitosa un nuevo evento ¿Deseas continuar y elegir los proveedores de tu nuevo evento o volver a la vista principal?</string>
    <string name="back_text">Volver</string>
    <string name="continue_text">Continuar</string>
    <string name="my_events_tab_text">Mis eventos</string>
    <string name="my_providers_tab_text">Mis proveedores</string>
    <string name="my_tickets_tab_text">Entradas</string>
    <string name="my_reservations_tab_title">Reservas</string>
</resources>
