<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_16"
    android:padding="@dimen/padding_16"
    android:background="@drawable/round_rectangle"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".viewcontrollers.activities.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <EditText
        android:id="@+id/firstnameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:drawableStart="@drawable/ic_person_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        android:fontFamily="@font/questrial"
        android:hint="@string/name_text"
        android:inputType="textPersonName"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toTopOf="@+id/lastnameEdiText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <EditText
        android:id="@+id/lastnameEdiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lastname_text"
        android:inputType="textPersonName"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_person_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameEditText" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_text"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_email_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/phoneEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameEdiText" />

    <EditText
        android:id="@+id/phoneEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_text"
        android:inputType="phone"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_smartphone_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/dniEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/dniEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dni_text"
        android:inputType="text"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_featured_video_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/birthdateEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText" />

    <EditText
        android:id="@+id/birthdateEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/birthdate_text"
        android:inputType="date"
        android:gravity="center_vertical"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_today_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dniEditText" >
    </EditText>


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_lock_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/passwordConfirmEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdateEditText" />

    <EditText
        android:id="@+id/passwordConfirmEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_text"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorAccent"
        android:fontFamily="@font/questrial"
        android:textSize="@dimen/text_size_14"
        android:textColor="@color/colorPrimaryText"
        android:textColorHint="@color/colorSecondaryText"
        android:layout_marginTop="@dimen/margin_8"
        android:drawableStart="@drawable/ic_lock_primary_24dp"
        android:drawablePadding="@dimen/padding_8"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:textSize="@dimen/text_size_14"
        android:fontFamily="@font/questrial"
        android:layout_marginTop="@dimen/margin_8"
        android:textStyle="bold"
        android:textColor="@color/colorIcons"
        android:background="@drawable/main_accent_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordConfirmEditText" />

</android.support.constraint.ConstraintLayout>