<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".viewcontrollers.activities.OnBoardingActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_32"
        android:layout_marginStart="@dimen/margin_32"
        android:adjustViewBounds="true"
        android:src="@drawable/launch_light_image"
        app:layout_constraintBottom_toTopOf="@+id/appText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/appText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginBottom="@dimen/margin_8"
        android:fontFamily="@font/questrial"
        android:text="@string/entry_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/companyImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView" />

    <ImageView
        android:id="@+id/companyImageView"
        android:layout_width="58dp"
        android:layout_height="41dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/company_logo_text"
        android:src="@drawable/company_logo_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appText" />
</android.support.constraint.ConstraintLayout>