<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/margin_8">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/successTitleTextView"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:textSize="@dimen/text_size_18"
            android:fontFamily="@font/questrial"
            android:text="@string/success_text"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/successImageView"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:src="@drawable/success_image"
            android:contentDescription="@string/success_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successTitleTextView"/>


        <TextView
            android:id="@+id/successDescriptionTextView"
            android:layout_width="@dimen/size_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:fontFamily="@font/questrial"
            android:text="@string/whats_next_text"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successImageView"/>

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/questrial"
            android:text="@string/back_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintBaseline_toBaselineOf="@+id/continueButton"
            app:layout_constraintEnd_toStartOf="@id/continueButton"/>

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:fontFamily="@font/questrial"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginEnd="@dimen/margin_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/successDescriptionTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/continue_text"/>

    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>