<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".viewcontrollers.activities.LoginActivity">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="@dimen/logo_default_size"
        android:layout_height="@dimen/logo_default_size"
        android:contentDescription="@string/app_name"
        android:src="@drawable/app_logo_dark_image"
        app:layout_constraintBottom_toTopOf="@+id/loginContainerLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="-1"
        android:textSize="@dimen/text_size_14"
        android:drawableStart="@drawable/ic_arrow_back_white_24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:fontFamily="@font/questrial"
        android:textStyle="bold"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/loginContainerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_24"
        android:background="@drawable/round_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        android:padding="@dimen/padding_24">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/questrial"
            android:hint="@string/email_text"
            android:drawableStart="@drawable/ic_email_primary_24dp"
            android:inputType="text"
            android:textSize="@dimen/text_size_14"
            android:drawablePadding="@dimen/padding_8"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_14"
            android:drawablePadding="@dimen/padding_8"
            android:layout_marginTop="@dimen/margin_8"
            android:backgroundTint="@color/colorAccent"
            android:drawableStart="@drawable/ic_lock_primary_24dp"
            android:fontFamily="@font/questrial"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorSecondaryText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

        <TextView
            android:id="@+id/forgotPasswordEditText"
            android:textSize="@dimen/text_size_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:textAlignment="center"
            android:fontFamily="@font/questrial"
            android:text="@string/forgot_text"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@drawable/main_button"
            android:fontFamily="@font/questrial"
            android:text="@string/login_text"
            android:textColor="@color/colorIcons"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordEditText" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@drawable/outline_button"
            android:fontFamily="@font/questrial"
            android:text="@string/register_text"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_14"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>